[package]
name = "atproto-auth"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Shared AT Protocol OAuth 2.0 authentication for Axum apps"

[dependencies]
# AT Protocol
atproto-oauth = "0.14"
atproto-oauth-axum = "0.14"
atproto-identity = "0.14"

# Web
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
http = "1"
tower = "0.5"

# Async
tokio = { version = "1", features = ["rt", "sync"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# Crypto / Auth
rand = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-chain = "1.0"

# Error handling
anyhow = "1"
thiserror = "2"

# URL encoding
urlencoding = "2"

# Time (for cookie max_age)
time = "0.3"

# Logging
tracing = "0.1"
